packages/taquito-michel-codec/test/contracts_015/ill_typed/view_toplevel_bad_name_invalid_type.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view 1 nat nat { UNPAIR ; ADD } ;
